ci: updating files from homelab-template
bringing common files in template up to date
template: homelab-template
branch: main
commit: 357c5a088b1f546a6c06790281e6126fa0dd19b9

this commit was generated by [🤖 templatron](https://github.com/charlesthomas/templatron)

--- a/.homelab-template.yaml
+++ b/.homelab-template.yaml
@@ -1,4 +1,4 @@
-_commit: v1.6.5-3-g5fda948
+_commit: v1.8.1
 _src_path: /home/crthomas/code/charlesthomas/homelab-template
 additionalResources: certificates.yaml
 backups: false
@@ -7,9 +7,11 @@ helmCrds: false
 helmName: nginx-ingress
 helmRelease: nginx-external
 helmRepo: https://helm.nginx.com/stable
-helmValues: 'helm/values.yaml'
+helmValues: helm/values.yaml
 helmVersion: 1.0.2
-ingSecret: ''
+homepageEnabled: true
+ingHost: nginx-external.crt.house
+ingName: nginx-external
 ingress: false
 labels: |-
   app.kubernetes.io/instance: external
