chore: add staging cert for cha.rlesthom.as

--- a/resources/certificates.yaml
+++ b/resources/certificates.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
@@ -11,3 +12,17 @@ spec:
     kind: ClusterIssuer
     name: letsencrypt-production
   secretName: crt.lol
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: cha.rlesthom.as
+  namespace: nginx-external
+spec:
+  commonName: 'cha.rlesthom.as'
+  dnsNames:
+  - 'cha.rlesthom.as'
+  issuerRef:
+    kind: ClusterIssuer
+    name: letsencrypt-staging
+  secretName: cha.rlesthom.as
