--- a/resources/deployments.yaml
+++ b/resources/deployments.yaml
@@ -37,6 +37,7 @@ spec:
                   - /wait-shutdown
           args:
             - /nginx-ingress-controller
+            - --default-ssl-certificate=nginx-external/crt.lol
             - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
             - --election-id=ingress-nginx-leader
             - --controller-class=k8s.io/ingress-nginx
