fix: ingress controller class

--- a/resources/deployments.yaml
+++ b/resources/deployments.yaml
@@ -40,7 +40,7 @@ spec:
             - --default-ssl-certificate=nginx-external/crt.lol
             - --publish-service=$(POD_NAMESPACE)/ingress-nginx-controller
             - --election-id=ingress-nginx-leader
-            - --controller-class=k8s.io/ingress-nginx
+            - --controller-class=k8s.io/ingress-nginx-external
             - --ingress-class=nginx-external
             - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
             - --enable-metrics=false
