--- a/resources/deployments.yaml
+++ b/resources/deployments.yaml
@@ -101,10 +101,7 @@ spec:
             - name: webhook-cert
               mountPath: /usr/local/certificates/
               readOnly: true
-          resources:
-            requests:
-              cpu: 100m
-              memory: 90Mi
+          resources: {}
       nodeSelector:
         kubernetes.io/os: linux
       serviceAccountName: ingress-nginx
